--- a/app/template/editProduct.html
+++ b/app/template/editProduct.html
@@ -6,11 +6,12 @@
         <h1>Edit Product</h1>
     </div>
     <div class="col-md-4">
-        <form name="editform" novalidate>
+        <form name="editform" novalidate flow-init>
             <div class="form-group">
                 <!-- Sidebar content-->
                 <label for="productname">name :</label>
-                <input ng-model="product.name" class="form-control" id="productname" name="productname" placeholder="name" required/>
+                <input ng-model="product.name" class="form-control" id="productname" name="productname"
+                       placeholder="name" required/>
 
                 <div class="alert alert-danger" role="alert" ng-show="editform.productname.$error.required">
                     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
@@ -35,11 +36,23 @@
                 <input ng-model="product.totalPrice" name="productprice" class="form-control" id="productprice"
                        placeholder="price" type="number" required/>
 
+
                 <div class="alert alert-danger" role="alert" ng-show="editform.productprice.$error.required">
                     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                     <span class="sr-only">Error:</span>
                     Price is Required!
                 </div>
+                <div><input type="file" flow-btn>
+                    <table>
+                        <tr ng-repeat="file in $flow.files">
+                            <td>{{$index+1}}</td>
+                            <td>{{file.name}}</td>
+                            <td><img flow-img="$flow.files[{{$index}}]"></td>
+                        </tr>
+                    </table>
+
+                </div>
+
                 <div class="alert alert-danger" role="alert" ng-show="editform.productprice.$error.number">
                     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                     <span class="sr-only">Error:</span>
@@ -48,8 +61,7 @@
 
             </div>
 
-
-            <button type="submit" class="btn btn-default" ng-click="addProduct()" ng-show="addPerson">Add</button>
+            <button type="submit" class="btn btn-default" ng-click="addProduct($flow)" ng-show="addPerson">Add</button>
             <button type="submit" class="btn btn-default" ng-click="editProduct()" ng-show="editPerson">Edit</button>
         </form>
     </div>
