--- a/app/app.css
+++ b/app/app.css
@@ -1,37 +1,44 @@
 /* app css stylesheet */
-.thumbnail{
-  max-width: 200px;
-  max-height: 150px;
-  line-height: 20px;
-  margin-buttom:5px;
+.thumbnail {
+    max-width: 200px;
+    max-height: 150px;
+    line-height: 20px;
+    margin-bottom: 5px;
 }
+
 .menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+    list-style: none;
+    border-bottom: 0.1em solid black;
+    margin-bottom: 2em;
+    padding: 0 0 0.5em;
 }
 
 .menu:before {
-  content: "[";
+    content: "[";
 }
 
 .menu:after {
-  content: "]";
+    content: "]";
 }
 
 .menu > li {
-  display: inline;
+    display: inline;
 }
 
 .menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
+    content: "|";
+    padding-right: 0.3em;
 }
 
 .menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
+    content: "";
+    padding: 0;
 }
 
-.error { display: block; float: none; color: red; padding-left: 11.5em; vertical-align: top; }
+.error {
+    display: block;
+    float: none;
+    color: red;
+    padding-left: 11.5em;
+    vertical-align: top;
+}
