--- a/app/template/productList.html
+++ b/app/template/productList.html
@@ -56,7 +56,7 @@
                 </div>
             </td>
 
-            <td class="text-center"><a ng-href="#/editProduct/{{product.id}}"> <span class="glyphicon glyphicon-edit"
+            <td class="text-center"><a href="#/editProduct/{{product.id}}"> <span class="glyphicon glyphicon-edit"
                                                                                      aria-hidden="true"></span></a></td>
             <td class="text-center"><a ng-href="#/listProduct"><span class="glyphicon glyphicon-remove-circle"
                                                                      aria-hidden="true"
