--- a/app/app.css
+++ b/app/app.css
@@ -1,4 +1,10 @@
 /* app css stylesheet */
+.myFrame{
+    max-width: 400px;
+    max-height: 350px;
+    line-height: 20px;
+    margin-bottom: 5px;
+}
 .thumbnail {
     max-width: 200px;
     max-height: 150px;
